--- a/src/styles/blocks/contact.pcss
+++ b/src/styles/blocks/contact.pcss
@@ -1,27 +1,14 @@
 .contact {
   max-width: 975px;
-  color: white; 
-
-  @include phones {
-    display: flex;
-    flex-direction: column;
-  }
 }
 
-.contact__title {
-  font-size: 36px;
+.contact__link {
+  font-size: 16px;
   font-weight: bold;
   line-height: 1.33;
-  margin-bottom: 100px;
+}
 
-  @include tablets {
-    font-size: 36px;
-    text-align: center;
-    margin-bottom: 59px;
-  }
-
-  @include phones {
-    font-size: 24px;
-  }
-  
+.contact__link:hover {
+  color: $white; 
+  transition: 0.3s;
 }
