--- a/src/styles/blocks/foot__block.pcss
+++ b/src/styles/blocks/foot__block.pcss
@@ -1,15 +1,14 @@
-.nav__list {
+.foot__list {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  flex-direction: column;
   font-size: 16px;
-  
-  
 }
 
-.nav__item {
+.foot__item {
   // margin-right: 60px;
   white-space: nowrap;
-  border-right: 2px solid $brownish-grey;
+  
   padding: 0 20px;
 
   &:last-child {
@@ -19,23 +18,14 @@
 
 }
 
-.nav__link {
+.foot__link {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.88;
 }
 
-.nav__link:hover {
+.foot__link:hover {
  color: $white; 
  transition: 0.3s;
 }
 
-.nav__list--foot {
-  flex-direction: column;
-  // justify-content: center;
-}
-
-.nav__item--foot {
-  margin-right: 0;
-  border-right: none;
-}
